# onlysq-cloud-drive

./: README.md  onlysq_drive-1.0.0-py3-none-any.whl  onlysq_drive-1.1.0-py3-none-any.whl  onlysq_drive-1.1.1-py3-none-any.whl  pyproject.toml
src/onlysq_drive/: autostart.py  cli.py  clipboard.py  cloud_client.py  config.py  drive_icon.py  fs_ops.py  fs_ops_linux.py  index_db.py  launcher.py  mount.py  paths.py  shell_integration.py  sidebar.py  vpaths.py
