[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onlysq-drive"
version = "1.0.0"
description = "CLI&Drive is an extension for Windows systems that allows you to use OnlySQ Cloud as a Windows drive (for example `O:`) using WinFsp + winfspy"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "fakelag28", email = "fakelag712@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: Microsoft :: Windows",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]
dependencies = [
  "requests>=2.31,<3",
  "winfspy>=0.8.4,<0.9 ; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/fakelag28/onlysq-cloud-drive"

[project.scripts]
onlysq-drive = "onlysq_drive.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
